# UUDEX

./: .gitignore  .pre-commit-config.yaml  README.md  disclaimer.txt  license.txt
fastapi-web-server/: .gitignore  README.md  pyproject.toml
fastapi-web-server/database-layer/: README.md  docker-compose.yml
fastapi-web-server/docker-code-gen/: openapi.json
fastapi-web-server/generated-client-api/: generate.sh  openapi.json
fastapi-web-server/generated-client-api/uudex-api-client/: README.md  pyproject.toml
fastapi-web-server/nginx/: default.conf
fastapi-web-server/secrets/: postgres_dsn  sqlite_dns
fastapi-web-server/tests/: conftest.py  test_create_services.py  test_retrieve.py
flex-web-client/: .gitignore  pyproject.toml
flex-web-client/certs/: 0a476033-5cc6-4050-a289-ddf11a8fe0d4-pnnl-client.crt  0a476033-5cc6-4050-a289-ddf11a8fe0d4-pnnl-client.csr  0a476033-5cc6-4050-a289-ddf11a8fe0d4-pnnl-client.key  3fa9be8b-a0f9-40a5-ab3d-51d580d4797e_alice.crt  3fa9be8b-a0f9-40a5-ab3d-51d580d4797e_alice.csr  3fa9be8b-a0f9-40a5-ab3d-51d580d4797e_alice.key  4b3b819e-94bd-4adf-b461-17ccb58ac870__app_rt_1.crt  4b3b819e-94bd-4adf-b461-17ccb58ac870__app_rt_1.csr  4b3b819e-94bd-4adf-b461-17ccb58ac870__app_rt_1.key  58c728dc-bb26-4d13-a670-348f8821057e_carol.crt  58c728dc-bb26-4d13-a670-348f8821057e_carol.csr  58c728dc-bb26-4d13-a670-348f8821057e_carol.key  7ef06c20-1937-4492-b697-122d07fc72e8_subj_pol_demo.crt  7ef06c20-1937-4492-b697-122d07fc72e8_subj_pol_demo.csr  7ef06c20-1937-4492-b697-122d07fc72e8_subj_pol_demo.key  8487799e-237b-4c26-8d25-c50665ac909a-oati-client.crt  8487799e-237b-4c26-8d25-c50665ac909a-oati-client.csr  8487799e-237b-4c26-8d25-c50665ac909a-oati-client.key  8f026ebe-c71e-4fa1-8d66-82d3d85b72a4-mitre-client.crt  8f026ebe-c71e-4fa1-8d66-82d3d85b72a4-mitre-client.csr  8f026ebe-c71e-4fa1-8d66-82d3d85b72a4-mitre-client.key  b24c1e2b-5c00-41ce-b196-630e69428d29_bob.crt  b24c1e2b-5c00-41ce-b196-630e69428d29_bob.csr  b24c1e2b-5c00-41ce-b196-630e69428d29_bob.key  ca.crt  ca.key  localhost.crt  localhost.csr  localhost.key  mitre-uudex.mitre.org.crt  mitre-uudex.mitre.org.csr  mitre-uudex.mitre.org.key  oati-uudex.oati.com.crt  oati-uudex.oati.com.csr  oati-uudex.oati.com.key  uudex-demo.pnl.gov.crt  uudex-demo.pnl.gov.csr  uudex-demo.pnl.gov.key
flex-web-client/scripts/: generate_keys_and_certs.py
(+330 files in other folders)
