[tool.poetry]
name = "uudex-fastapi-server"
version = "0.1.0"
description = ""
authors = ["C. Allwardt <3979063+craig8@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "uudex_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pyrabbit2 = "^1.0.7"
casbin = "^1.33.0"
python-dotenv = "^1.0.0"
benedict = {extras = ["all"], version = "^0.3.2"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
fastui = "^0.4.0"
cryptography = "^41.0.7"
attrs = "^23.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
openapi-python-client = "^0.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[tool.mypy]
show_error_context = true
pretty = true
show_column_numbers = true
